--- a/index.html
+++ b/index.html
@@ -20,33 +20,18 @@
         body {font-family: Arial, sans-serif; text-align: center; background: #fff; color: #000; padding: 20px; margin: 0;}
         h1 {font-size: 32px;}
         p {font-size: 18px; line-height: 1.6;}
-        .instruction {display: none;}
-        @media (display-mode: browser) {
-            .instruction {display: block;}
-            .app-screen {display: none;}
-        }
-        @media (display-mode: standalone), (display-mode: fullscreen) {
-            .instruction {display: none;}
-            .app-screen {display: block;}
-        }
         input {font-size: 18px; padding: 12px; width: 80%; max-width: 400px; margin: 20px auto; background: #f0f0f0; border: 1px solid #000; color: #000; border-radius: 8px;}
-        button {font-size: 18px; padding: 12px 30px; background: #ffd700; color: #000; border: none; border-radius: 8px;}
+        button {font-size: 18px; padding: 12px 30px; background: #ffd700; color: #000; border: none; border-radius: 8px; cursor: pointer;}
         .expired {color: red; font-size: 24px;}
+        img {max-width: 200px; border-radius: 12px; margin: 20px 0;}
     </style>
 </head>
 <body>
-    <div class="instruction">
-        <h1>Chrome</h1>
-        <p>1) натисніть на три точки в правому верхньому куту</p>
-        <p>2) натисніть на "Додати на головний екран"</p>
-    </div>
-    <div class="app-screen">
-        <h1>Аналог Дія</h1>
-        <p>Введіть код доступу з бота:</p>
-        <input type="text" id="code" placeholder="Наприклад: 97Vc82ca">
-        <button onclick="loadData()">Увійти</button>
-        <div id="result"></div>
-    </div>
+    <h1>Аналог Дія</h1>
+    <p>Введіть код доступу з бота:</p>
+    <input type="text" id="code" placeholder="Наприклад: 97Vc82ca">
+    <button onclick="loadData()">Увійти</button>
+    <div id="result"></div>
     <script>
         async function loadData() {
             const code = document.getElementById('code').value.trim();
@@ -61,11 +46,11 @@
                     html = `<h2>Ваші дані</h2>
                             <p><strong>ПІБ:</strong> ${data.fio || ''}</p>
                             <p><strong>Дата народження:</strong> ${data.birthdate || ''}</p>
-                            ${data.photo_url ? `<img src="${data.photo_url}" alt="Фото" style="max-width:200px;border-radius:12px;">` : ''}`;
+                            ${data.photo_url ? `<img src="${data.photo_url}" alt="Фото">` : ''}`;
                 }
                 document.getElementById('result').innerHTML = html;
             } catch (e) {
-                alert("Невірний код або помилка з'єднання");
+                alert("Невірний код або термін дії закінчився");
             }
         }
     </script>
